add_subdirectory(Input)
add_subdirectory(InputActions)
add_subdirectory(Graphics)
add_subdirectory(Object)
add_subdirectory(Scene)
add_subdirectory(Camera)
add_subdirectory(Collider)
add_subdirectory(Stage)
add_subdirectory(Behavior)
add_subdirectory(World)
add_subdirectory(Math)
add_subdirectory(Core)
add_subdirectory(Utils)